--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body class="h-full">
-    <div id="root"></div>
+    <div id="root" class="bg-gray-100"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
